# fizzbuzzer

./: Cargo.toml  README.md
.rpm/: fizzbuzz.spec
src/: fizzbuzzer.rs  lib.rs  main.rs
tests/: fizzbuzz.rs
