[package]
name = "fizzbuzz"
authors = ["Chris Sondermeijer <chris.sondermeijer@gmail.com>", "Bart Knaack <bart.knaack@proftest.nl>"]
version = "0.1.0"
edition = "2021"
description = "Test Driven Development (TDD) in action!"
readme = "README.md"
repository = "https://github.com/sondermc/fizzbuzz.git"
homepage = "https://github.com/sondermc/fizzbuzz.git"

[[bin]]
name = "fizzbuzz"
src = "src/main.rs"
